# Facultate

./: .gitignore  README.md
AG/Lab_1/: CMakeLists.txt  main.cpp
AG/Lab_2/: CMakeLists.txt  main.cpp
AG/Lab_3/: 1_out.txt  7-out.txt  CMakeLists.txt  p1.cpp
AG/Lab_4/: CMakeLists.txt  main.cpp
AG/Lab_5/: main.cpp
AG/problema-10/: CMakeLists.txt  main.cpp
AI/Tema 1/: 1.py  2.py  4.py  5.py  7.py
AI/Tema5/: 1.ipynb
AI/Tema7/: lab7.ipynb
AI/Tema8/: lab8_ex1.ipynb  lab8_ex2.ipynb
AI/Tema9/: lab9_k_means.ipynb
AI/lab6/: ClasificareFlori.ipynb  ClasificareaTesuturilorCancerigene.ipynb  GradientulDescrescator.ipynb
AI/lab7/: lab7.ipynb
ASC/asc_probleme/: a.txt  problema_1_drive.asm  problema_1_drive.lst  problema_2_drive.asm  problema_2_drive.lst  (+6 more)
BD/: CRUD.sql  Examen-practic.sql  SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  SQLQuery4.sql  SQLQuery5.sql  testing.sql  version_control.sql
OOP/Lab-8-9/: Agentie.cpp  Agentie.h  CMakeLists.txt  CosRepo.cpp  CosRepo.h  CosService.cpp  CosService.h  Oferta.cpp  Oferta.h  OfertaRepo.cpp  OfertaRepo.h  OfertaRepoFis.cpp  OfertaRepoFis.h  OfertaTeste.cpp  OfertaTeste.h  RepoTeste.cpp  RepoTeste.h  ServiceTeste.cpp  ServiceTeste.h  TesteValidator.h  main.cpp  presentation.cpp  presentation.h  undo.h  validator.cpp  validator.h
OOP/Lab_2-4/: CMakeLists.txt  listaOferte.c  listaOferte.h  main.c  oferta.c  oferta.h  ofertaRepo.c  ofertaRepo.h  ofertaService.c  ofertaService.h  testOfertaRepo.c  testOfertaRepo.h  testOfertaService.c  testOfertaService.h  ui.c  ui.h
SD/: Lab_1.mw  Lab_2.mw  Lab_3.mw  Lab_4.mw
(+556 files in other folders)
