cmake_minimum_required(VERSION 3.22)
project(Lab_8_9)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab_8_9 main.cpp Agentie.h Agentie.cpp Oferta.cpp OfertaRepo.cpp OfertaTeste.cpp presentation.cpp RepoTeste.cpp ServiceTeste.cpp TesteValidator.cpp validator.cpp CosService.h CosService.cpp CosRepo.h CosRepo.cpp undo.h OfertaRepoFis.cpp)
